[api] return total number of account states
